--- a/assets/css/github-markdown.css
+++ b/assets/css/github-markdown.css
@@ -54,7 +54,8 @@
   -webkit-text-size-adjust: 100%;
   color: #24292e;
   line-height: 1.5;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  /*font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;*/
+  font-family: serif;
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
@@ -534,7 +535,7 @@
 }
 
 .markdown-body blockquote {
-  border-left: .2em solid #36cc63;
+  border-left: .2em solid #03A9F4;
   color: #6a737d;
   background-color: rgba(102,128,153,0.05);
   padding: .2em .5rem;
@@ -743,7 +744,7 @@
   /*overflow: visible;*/
   /*padding: 0;*/
   /*word-wrap: normal;*/
-  padding: 10px 10px 10px 20px;
+  padding: 2px 5px;
 }
 
 .markdown-body .commit-tease-sha {
