--- a/assets/css/monokai-sublime.less
+++ b/assets/css/monokai-sublime.less
@@ -3,7 +3,7 @@
   overflow-x: auto;
   padding: .5em;
   background: @hljs;
-  box-shadow: inset 0px 0px 5px 1px #060606;
+  //box-shadow: inset 0px 0px 5px 1px #060606;
 }
 
 /*.hljs::-webkit-scrollbar { !*滚动条整体样式*!*/
