--- a/assets/css/highlightjs-line-numbers.css
+++ b/assets/css/highlightjs-line-numbers.css
@@ -14,6 +14,7 @@ pre {
   -ms-user-select: none;
   user-select: none;
   padding: 0 10px !important;
+  width: 38px !important;
 }
 
 .hljs-ln-code {
