--- a/assets/css/monokai-sublime.less
+++ b/assets/css/monokai-sublime.less
@@ -2,7 +2,7 @@
   display: block;
   overflow-x: auto;
   padding: .5em;
-  background: @hljs;
+  background: var(--hljs);
   //box-shadow: inset 0px 0px 5px 1px #060606;
 }
 
